2009-03-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.22

2009-03-21  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes NB#103725.

	* matchbox/core/mb-wm-client-window.c: remove warning about BadWindow
	since it is commonplace to request details of a window which has been
	unmapped since we requested it.

2009-03-21  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Refs NB#105404.
	
	* matchbox/core/mb-wm-client-window.c: newlines in window titles
	are converted to spaces.

2009-03-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_press_handler): Fix
	a memory leak in freeing the list of transients.
	* matchbox/core/mb-wm-layout.c (mb_wm_layout_real_layout_fullscreen):
	Fix an identical list-related memory leak.

2009-03-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/comp-mgr/mb-wm-comp-mgr.c:
	  mb_wm_comp_mgr_unregister_client():
	    break the connection between the wm-client and cmgr-client
	    on both sides and don't leave dangling pointers around.
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	  mb_wm_comp_mgr_clutter_fetch_texture():
	    added a missing mb_wm_util_trap_x_errors().
	  mb_wm_comp_mgr_clutter_client_destroy():
	    prepare for XDamageDestroy() erring out for whatever reason.
	    fixes an abnormal program termination when incoming event
	    notifications are unmapped.

2009-03-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties):
	Regression fix.  When the the window name property changed but we
	failed to get the new value the old MBWMClientWindow::name field
	left dangling.  Fixes a crash with modest's new account wizard,
	which tries to set the dialog's title when it is cancelled.

2009-03-18  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes: NB#103836 (or at least its test case). Kimmo: this was
	reverted?
	
	* matchbox/core/mb-wm-client-window.c: When we're told that