@@ -1,3 +1,8 @@
+2009-03-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
+	  Prepare the modal blocker window for possible rotateion.
+
 2009-03-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Release 0.2.22
